--- a/nerea/index.html
+++ b/nerea/index.html
@@ -64,7 +64,7 @@
             <div class="carousel-inner">
                 <!--PRIMERA IMG SLIDER-->
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/img-slider-3.jpg" alt="First slide">
+                    <img class="d-block slider-img w-100" src="img/img-slider-3.jpg" alt="First slide">
                         <div class="carousel-caption">
                             <h1 class="">Hamburgueseria UE</h1>         
                             <h2 class="">Pide &amp; Disfruta</h2>            
@@ -73,7 +73,7 @@
                 </div>
                 <!--SEGUNDA IMG SLIDER-->
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/Hamburguesa_slider_5.jpg" alt="Second slide">
+                    <img class="d-block slider-img w-100" src="img/Hamburguesa_slider_5.jpg" alt="Second slide">
                     <div class="carousel-caption">
                         <h1 class="">Hamburgueseria UE</h1>         
                         <h2 class="">Pide &amp; Disfruta</h2>            
@@ -82,7 +82,7 @@
                 </div>
                 <!--TERCERA IMG SLIDER-->
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/tiramisu.jpg" alt="Third slide">
+                    <img class="d-block slider-img w-100" src="img/tiramisu.jpg" alt="Third slide">
                     <div class="carousel-caption">
                         <h1 class="">Hamburgueseria UE</h1>         
                         <h2 class="">Pide &amp; Disfruta</h2>            
