Frontend by Nerea

--- a/nerea/index.html
+++ b/nerea/index.html
@@ -163,7 +163,7 @@
                     <div class="col-md-4">
                         <div class="card bg-transparent border my-3 my-md-0">
                             <a href="" alt="">
-                            <img src="img/blog-1.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
+                            <img src="img/hamburgers-with-beef.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20"> Hamburguesas de Ternera </h4>
                                 <p class="text-white"> Disfruta de una exquisita selección de Hamburguesas Gourmet de Ternera, preparadas con la más alta calidad de carne de ternera, jugosas y llenas de sabor.  ¡una verdadera delicia para tu paladar!</p>
@@ -175,7 +175,7 @@
                     <div class="col-md-4">
                         <div class="card bg-transparent border my-3 my-md-0">
                             <a href="" alt="">
-                            <img src="img/blog-2.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
+                            <img src="img/" alt="" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20"> Hamburguesas de Pollo </h4>
                                 <p class="text-white"> Descubre nuestra deliciosa selección de Hamburguesas Gourmet de Pollo, elaboradas con jugosa carne de pollo premium y sazonadas con una mezcla especial que realzan su sabor. </p>
@@ -202,32 +202,32 @@
             <!-- CATEGORIA BOCADILLOS -->
             <div class="tab-pane fade" id="bocadillos" role="tabpanel" aria-labelledby="pills-profile-tab">
                 <div class="row">
+                    <!-- BOCADILLOS VEGETALES-->
                     <div class="col-md-4 my-3 my-md-0">
                         <div class="card bg-transparent border">
                             <img src="img/blog-4.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$15</a></h1>
-                                <h4 class="pt20 pb20">Consectetur Adipisicing Elit</h4>
+                                <h4 class="pt20 pb20">Bocadillos Vegetales</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
                         </div>
                     </div>
+                    <!-- BOCADILLOS DE POLLO-->
                     <div class="col-md-4 my-3 my-md-0">
                         <div class="card bg-transparent border">
-                            <img src="img/blog-5.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
+                            <img src="img/food-5981258_1280.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$29</a></h1>
-                                <h4 class="pt20 pb20">Ullam Laboriosam</h4>
+                                <h4 class="pt20 pb20">Bocadillos de Pollo</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
                         </div>
                     </div>
+                    <!-- BOCADILLOS ESPECIALES-->
                     <div class="col-md-4 my-3 my-md-0">
                         <div class="card bg-transparent border">
                             <img src="img/blog-6.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$3</a></h1>
-                                <h4 class="pt20 pb20">Fugit Ipsam</h4>
+                                <h4 class="pt20 pb20">Bocadillos especiales</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
                         </div>
@@ -239,6 +239,7 @@
             <!-- CATEGORIA ENSALADAS -->
             <!-- CATEGORIA POSTRES -->
             <!-- CATEGORIA BEBIDAS-->
+
         </div>
     </div>
     <hr>
