--- a/nerea/index.html
+++ b/nerea/index.html
@@ -165,7 +165,7 @@
                             <a href="" alt="">
                             <img src="img/hamburgers-with-beef.jpg" alt="" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h4 class="pt20 pb20"> Hamburguesas de Ternera </h4>
+                                <h4 class="pt20 pb20"> Hamburguesas de Ternera </h4> <!--AÑADIR ROUTE--> -->
                                 <p class="text-white"> Disfruta de una exquisita selección de Hamburguesas Gourmet de Ternera, preparadas con la más alta calidad de carne de ternera, jugosas y llenas de sabor.  ¡una verdadera delicia para tu paladar!</p>
                             </a>
                             </div>
